--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="imagetitre">
-        <img src="rorysho.png">
-    </div>
+   
     <div class="content">
-        <h1>Bienvenue Dans l'espace de Sho et Rory :D</h1>
-        <p>les meilleurs des meilleurs.</p>
+        <h1>JE T'AIME RORYYYY</h1>
+        <p>(j'ai supprimé parce que pour le moment ya que des bug.....)</p>
     </div>
 </body>
 </html>
